# docs/swagger.yaml
@@ -6,6 +6,16 @@ definitions:
       name:
         type: string
     type: object
+  controllers.ChangePasswordInput:
+    properties:
+      current_password:
+        type: string
+      new_password:
+        type: string
+    required:
+    - current_password
+    - new_password
+    type: object
   controllers.GameInput:
     properties:
       category_id:
@@ -104,6 +114,8 @@ definitions:
         type: integer
       publisher_id:
         type: integer
+      ratings:
+        type: number
       release_date:
         type: string
       updated_at:
@@ -858,4 +870,37 @@ paths:
       summary: update a Review by id
       tags:
       - Review
+  /users/{id}/change-password:
+    patch:
+      description: renew users password.
+      parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: the body to change user password
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.ChangePasswordInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerToken: []
+      summary: Change users password.
+      tags:
+      - User
 swagger: "2.0"
